# cursoc-guillermo-GoL

./: .gitignore  CMakeLists.txt  Makefile  builder.ui  game.c  game.h  gui.c  gui.h  juego-vida.args  list.h  main-gui.c  main-normal.c  main-toroidal.c  main.c  test_infinite_loop.args  world.c  world.h  world_normal.c  world_normal.h  world_toroidal.c  world_toroidal.h
